--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 
-spring.security.user.name=niguskidane
-spring.security.user.password=dummy
+#spring.security.user.name=niguskidane
+#spring.security.user.password=dummy
